<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="binding"
            type="com.cardnotes.inspirationalquotes.application.binding.SpecialBinding" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{() -> binding.onPopular()}">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:image="@{binding.popular}"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:fontFamily="@font/raleway_semi_bold"
                android:textSize="13.5sp"
                android:textColor="?attr/colorOnSurface"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{() -> binding.onProverbs()}">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:image="@{binding.proverb}"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proverbs"
                android:fontFamily="@font/raleway_semi_bold"
                android:textSize="13.5sp"
                android:textColor="?attr/colorOnSurface"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{() -> binding.onLove()}">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:image="@{binding.love}"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/love"
                android:fontFamily="@font/raleway_semi_bold"
                android:textSize="13.5sp"
                android:textColor="?attr/colorOnSurface"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{() -> binding.onFavorite()}">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:image="@{binding.favorite}"
                android:layout_marginBottom="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:fontFamily="@font/raleway_semi_bold"
                android:textSize="13.5sp"
                android:textColor="?attr/colorOnSurface"/>
        </LinearLayout>
    </LinearLayout>
</layout>